fix(ui/Page): title gap issue and centered data attibute naming

--- a/packages/ui/src/assets/css/page.css
+++ b/packages/ui/src/assets/css/page.css
@@ -5,8 +5,9 @@
   grid-template-columns: 100%;
 }
 
-.dz-page[data-alignment="true"] {
+.dz-page[data-centered="true"] {
   justify-items: center;
+  align-items: center;
   max-width: var(--dz-page-max-width);
   margin: auto;
 }
@@ -20,6 +21,10 @@
   margin-top: 1rem;
 }
 
+.dz-page .subtitle {
+  margin-top: var(--dz-page-gap);
+}
+
 @media (min-width: 576px) {
   .dz-page {
     grid-template-columns: 1fr auto;
@@ -29,13 +34,8 @@
     grid-column: 1 / span 2;
   }
 
-  .dz-page > .subtitle {
-    grid-column: 1 / span 2;
-    order: 1;
-  }
-
   .dz-page > .content {
     grid-column: 1 / span 2;
-    order: 2;
+    order: 1;
   }
 }
